--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,3 +1,27 @@
-.Search{
-    border: 1px solid purple;
+.Search {
+  margin: 1.5rem 0 2.69rem 0;
+  position: relative;
+}
+
+.searchIcon {
+  position: absolute;
+  top: 19px;
+  right: 1.53rem;
+}
+
+.form-control {
+  background-color: var(--search-background-color);
+  color: var(--text-color);
+  border-radius: 1rem;
+  border: none;
+  padding: 1rem 1.4rem;
+}
+
+.form-control:focus {
+  background-color: var(--search-background-color);
+  color: var(--text-color);
+}
+
+.form-control::placeholder{
+  color: var(--text-color);
 }
