--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ h6 {
   --body-color: black;
   --link-color: purple;
   --line-color: #e9e9e9;
+  --secondary-text-color: #a445ed;
 }
 
 [data-theme="dark"] {
@@ -79,6 +80,7 @@ h6 {
   --body-color: white;
   --link-color: cyan;
   --line-color: #fff;
+
 }
 
 * {
